<resources>
    <string name="app_name">Thesis app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thesis app</string>
    <string name="nav_header_subtitle">m_vydra@utb.cz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_touch">Touch</string>
    <string name="menu_info">Info</string>

    <string name="home_second">Home Second</string>
    <string name="refresh">refresh</string>
    <string name="connected">Connected</string>
</resources>
