<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        app:launchSingleTop="true"
        android:id="@+id/nav_home"
        android:name="cz.utb.thesisapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        android:tag="fragment_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_touch"
        android:name="cz.utb.thesisapp.ui.touch.TouchFragment"
        android:label="@string/menu_touch"
        tools:layout="@layout/fragment_touch"
        android:tag="fragment_touch"/>

    <fragment
        android:id="@+id/nav_info"
        android:name="cz.utb.thesisapp.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>